--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "whatsapp-web.js": "^1.26.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
+    "eslint": "^9.17.0",
+    "globals": "^15.14.0",
     "nodemon": "^3.1.9"
   }
 }
